# pyqtm

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
doc/examples/: deutsch_problem_balanced.json  deutsch_problem_constant.json  fill_ones.json  hadamard.json  invalid.json  parity.json
src/pyqtm/: constants.py  utils.py
src/pyqtm/cli/: __init__.py  formatting.py  launcher.py
src/pyqtm/model/: __init__.py  machine.py  operators.py  state.py  types.py  variable.py
test/: test_machine.py  test_operators.py  test_state.py
