[tool.poetry]
name = "pyqtm"
version = "0.1.0"
description = "Quantum Turing Machine (QTM) simulator"
authors = ["Tamas Nepusz <ntamas@gmail.com>"]
license = "MIT"
packages = [
    { include = "pyqtm", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.23.3"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pyqtm = "pyqtm.cli.launcher:main"
